# aria-lang

./: CMakeLists.txt  Makefile  Makefile.full  README.md  TESLA_NETWORKING_GUIDE.md  demo_architectural_improvements.sh  tesla_ai_consciousness_demo.py  tesla_consciousness_monitor.py
cmake/: BuildLLD.cmake  BuildLLVM.cmake  BuildNASM.cmake  BuildTCC.cmake  BundleHeaders.cmake  NASMMacros.cmake
demos/: run_octave_demo.sh  run_selective_sync_demo.sh  tesla_octave_demo  tesla_octave_performance_demo.c  tesla_selective_sync_demo  tesla_selective_sync_demo.c
docs/: ARIA_0_0_2_BETA_RELEASE.md  ARIA_0_0_2_BETA_TODO.md  ARIA_STDLIB_PORTFOLIO.md  Aria_0.0.1_Full_Language_Guide.md  DEVELOPMENT_SUMMARY.md  EXPERT_REVIEW_IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  TESLA_WEB_GUIDE.md  Tesla_Consciousness_Complete_Guide.md  Tiny C Compiler Reference Documentation.html  coroutines.md  missing.txt  modernFeatures.md  self_containment_roadmap.md  tesla_operators.md
docs/examples/: README.md  ai_tensor_operations.aria  comptime_ai_training.aria  consciousness_networking.aria  fiber_concurrency.aria  hello_world.aria
docs/nasm-3.01/doc/html/: nasm00.html  nasm01.html  nasm02.html  nasm03.html  nasm04.html  nasm05.html  nasm06.html  nasm07.html  nasm08.html  nasm09.html  nasm10.html  nasm11.html  nasm12.html  nasm13.html  nasm14.html  nasmaa.html  nasmab.html  nasmac.html  nasmad.html  nasmae.html  nasmaf.html  nasmix.html
docs/research/: README.md  borrowChecker.md  fixes.md  gemini_architectural_validation.md  pre-assembly.md  review.md  selfcontainedcompiler.md  tesla_consciousness_computing_research_paper.md  tesla_consciousness_computing_technical_appendix.md  utilsAndDevTools.md
examples/: llvm_dwarf_integration_test.c
include/tesla/: tesla_consciousness_scheduler.h  tesla_enhanced_memory.h  tesla_path_resolver.h  tesla_safe_exec.h
scripts/: aria_beta_progress.sh  create_tesla_module.sh  phase1_completion_celebration.sh  phase2_progress_celebration.sh
src/: Makefile  aria_integrated_compiler.c  assembler_detection.c  main.c  main.cpp
src/asm/: CMakeLists.txt  tesla_asm.h  tesla_context_switch.S  tesla_memory.S  tesla_strings.S  tesla_timing.S
src/backend/: codegen.c
src/borrow_checker/: CMakeLists.txt  tesla_compiler_integration.cpp  tesla_compiler_integration.h  tesla_hybrid_borrow_checker.cpp  tesla_hybrid_borrow_checker.h
src/bundler/: CMakeLists.txt  tool_bundler.cpp  tool_bundler.h
src/comptime/: CMakeLists.txt  tesla_comptime.c  tesla_comptime.h
src/core/: CMakeLists.txt  Makefile  aria_compiler.cpp  aria_compiler.h  llvm_integration.c  llvm_integration.h  tesla_debug_info.c  tesla_debug_info.h
src/coroutines/: CMakeLists.txt  tesla_channels.cpp  tesla_csp_runtime.cpp  tesla_csp_runtime.h
src/detection/: CMakeLists.txt  assembler_detection.cpp  assembler_detection.h
src/frontend/: arena.c  ast.h  lexer.c  parser.c  token.h
src/parser/: tesla_ast.h
src/preprocessor/: CMakeLists.txt  consciousness_directives.cpp  consciousness_directives.h  context_stack.c  context_stack.h  macro_engine.cpp  macro_engine.h  macro_engine_broken.cpp  preprocessor.c  tesla_preprocessor.cpp  tesla_preprocessor.h
src/runtime/: CMakeLists.txt  bundler.c  bundler.h  gc.c  gc.h  gc_shadow_stack.c  header_extractor.cpp  header_extractor.h  libaria_blob.h  nasm_blob.h  object.c  tcc_blob.h  tesla_consciousness_scheduler.c  tesla_enhanced_memory.c  tesla_path_resolver.c  tesla_safe_exec.c  tesla_toybox_integration.c  tesla_toybox_integration.h
src/stdlib/: 2d_drawing.c  3d_drawing.c  ai.c  algorithms.c  alt_bases.c  atomics.c  clock.c  container.c  dataStructures.c  database.c  dynamic.c  fetch.c  ffi.c  fs.c  gamepad.c  gui_components.c  io.c  linux.c  math.c  mouse.c  network.c  nonary.c  processes.c  quinary.c  sound.c  ssh.c  std_io.c  std_ioe.c  string_utils.c  string_utils_old.c  terminal.c  tesla_2d.aria  tesla_3d.aria  tesla_ai_native.aria  tesla_algorithms.aria  tesla_atomics.aria  tesla_audio.aria  tesla_clock.aria  tesla_container.aria  tesla_dataStructures.aria  (+28 more)
src/tesla/: tesla_comptime_minimal.h
src/tools/: Machine Learning - Guided Optimization (MLGO) — LLVM 22.0.0git documentation.mhtml  Untitled Document  bundling.md  tcc
src/types/: tesla_types.h
src/utils/: bin2c.c
tests/: README.md  run_all_tests.sh  tesla_math_test.aria  tesla_performance_validation.c  tesla_phase2_integration_test.aria  tesla_string_test.aria  test_tesla_atomics.c  test_tesla_clock.c  test_tesla_consciousness.c  test_tesla_container.c  test_tesla_dataStructures.c  test_tesla_database.c  test_tesla_fetch.c  test_tesla_fs.c  test_tesla_integration.c  test_tesla_io.c  test_tesla_math.c  test_tesla_network.c  test_tesla_processes.c  test_tesla_ssh.c  test_tesla_std_io.c  test_tesla_string_utils.c  test_tesla_threads.c  test_tesla_web.c
tests/stdlib/: test_tesla_clock.aria  test_tesla_database.aria  test_tesla_fs.aria  test_tesla_network.aria  test_tesla_processes.aria  test_tesla_std_io.aria  test_tesla_threads.aria
tools/: tesla-pkg.py
